--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ node_modules/
 /playwright-report/
 /blob-report/
 /playwright/.cache/
-/my.config.ts/
+/playwright-session-learning/my.config.ts/
 /json/
 /junit/
